--- a/pokedex-front/src/pages/Home/Home.css
+++ b/pokedex-front/src/pages/Home/Home.css
@@ -1,4 +1,3 @@
 body{
     background-color: #112B3C;
-    overflow: hidden;
 }
